Twenty Seventeen: Prevent YouTube videos from being cut off in Safari.
The theme's `object-fit: cover` styles for the header caused YouTube videos to be positioned too far left in Safari. 

Fixes #40522.


Built from https://develop.svn.wordpress.org/trunk@44669


git-svn-id: http://core.svn.wordpress.org/trunk@44500 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -1748,7 +1748,6 @@ body:not(.title-tagline-hidden) .site-branding-text {
 @supports ( object-fit: cover ) {
 	.has-header-image .custom-header-media img,
 	.has-header-video .custom-header-media video,
-	.has-header-video .custom-header-media iframe,
 	.has-header-image:not(.twentyseventeen-front-page):not(.home) .custom-header-media img {
 		height: 100%;
 		left: 0;
